# just-longslit-ics

./: README.md
just-ls-ics-starter/: CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  mkdocs.yml  pyproject.toml
just-ls-ics-starter/cpp/: README.md
just-ls-ics-starter/docs/: index.md
just-ls-ics-starter/docs/adr/: 0001-monorepo-python.md
just-ls-ics-starter/src/justls/: config.py
just-ls-ics-starter/src/justls/hal/: base.py  simulator.py
just-ls-ics-starter/src/justls/ics/: api.py
just-ls-ics-starter/src/justls/telemetry/: influx.py
just-ls-ics-starter/tests/: test_smoke.py
just-ls-ics-starter/ui/: README.md
