[project]
name = "just-longslit-ics"
version = "0.1.0"
description = "JUST 长缝光谱仪控制系统（最小可运行骨架）"
authors = [{name = "JUST Project", email = "dev@just.local"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "influxdb-client>=1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "types-requests",
    "mkdocs-material>=9.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","SIM","PL","RUF"]
lint.ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict = true
plugins = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
